make-a-wish-salesforce/src/objects/Chapter_Role_O_T__c.object
<CustomObject>
    <description>This is a junction object that would join the Orientation &amp; Training objects and the Roles object.</description>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <formula>Chapter_Role__r.Chapter_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate with Chapter Role Object.</description>
        <label>Chapter Role</label>
        <referenceTo>Chapter_Role__c</referenceTo>
        <relationshipName>O_T_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orientation_Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds orientation &amp; Training for chapter roles.</description>
        <label>Orientation &amp; Training</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please select Training Orientation.</errorMessage>
            <filterItems>
                <field>Orientation_Training__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Training</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Orientation_Training__c</referenceTo>
        <relationshipLabel>Chapter Roles O&amp;T</relationshipLabel>
        <relationshipName>O_T_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will indicate this training is required or not.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Chapter_Role__r.Role_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <label>Chapter Role O&amp;T</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role_Name__c</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Chapter_Role__c</columns>
        <columns>Orientation_Training__c</columns>
        <columns>Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OTR-{000000}</displayFormat>
        <label>O&amp;T Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapter Roles O&amp;T</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>